// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm snapshot empty 1`] = `
<div>
  <div
    class="login-form"
  >
    <form
      class=""
    >
      <h2
        class="text-center"
      >
        BIILOG
      </h2>
      <div
        class="form-group"
      >
        <input
          class="form-control"
          name="email"
          placeholder="E-mail cadastrado"
          type="email"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <input
          class="form-control"
          name="password"
          placeholder="Senha"
          type="password"
          value=""
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <button
          class="btn btn-primary btn-block"
          type="submit"
        >
          Login
        </button>
      </div>
      <div
        class="fade alert alert-primary alert-dismissible show"
        hidden=""
        role="alert"
      >
        <button
          class="close"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
          <span
            class="sr-only"
          >
            Close alert
          </span>
        </button>
        <ul>
          <li>
            null
          </li>
        </ul>
      </div>
      <div
        class="clearfix"
      >
        <a
          href="/recoverPassword"
        >
          Recuperar Senha ?
        </a>
      </div>
    </form>
  </div>
</div>
`;

exports[`LoginForm snapshot with data 1`] = `
<div>
  <div
    class="login-form"
  >
    <form
      class=""
    >
      <h2
        class="text-center"
      >
        BIILOG
      </h2>
      <div
        class="form-group"
      >
        <input
          class="form-control"
          name="email"
          placeholder="E-mail cadastrado"
          type="email"
          value="testemock@teste.com.br"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <input
          class="form-control"
          name="password"
          placeholder="Senha"
          type="password"
          value="dTVlclBAc3N3b3Jk"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <button
          class="btn btn-primary btn-block"
          type="submit"
        >
          Login
        </button>
      </div>
      <div
        class="fade alert alert-primary alert-dismissible show"
        hidden=""
        role="alert"
      >
        <button
          class="close"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
          <span
            class="sr-only"
          >
            Close alert
          </span>
        </button>
        <ul>
          <li>
            null
          </li>
        </ul>
      </div>
      <div
        class="clearfix"
      >
        <a
          href="/recoverPassword"
        >
          Recuperar Senha ?
        </a>
      </div>
    </form>
  </div>
</div>
`;
